--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@thirdweb-dev/chains": "^0.1.57",
     "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3",
+    "@thirdweb-dev/sdk": "^4.0.10",
     "ethers": "^5",
+    "framer-motion": "^10.16.4",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-moment": "^1.1.3",
+    "recharts": "^2.9.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
